fixes for when the content on the reward is too big

--- a/app/assets/stylesheets/catarse_bootstrap/pages/projects/show.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/pages/projects/show.sass
@@ -145,8 +145,10 @@
 	padding: 2em 1.5em 2em
 	display: inline-block
 	font-size: 13px
+	width: 100%
 	p
 		font-size: 1em
+		word-wrap: break-word
 	.reward_deliver_at p, .reward_updated_at p, .in_time_to_confirm p
 		margin: 0
 		font-size: 12px
